metadata/force-app/main/default/objects/OpportunityLineItem/fields/Product_Name_for_the_Flow__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_for_the_Flow__c</fullName>
    <description>BODEV-706: If the product is a user or storage and not part of the package, then the formula returns &quot;Additional ...&quot;  value.</description>
    <formula>IF(
AND(
 Opportunity.MM_Standardised_Package__c = True,
 (Part_of_a_package__c = False),
 (Purchase_family__c = &quot;Storage Upgrade&quot; || Purchase_family__c = &quot;User Upgrade&quot;)),
&quot;Additional &quot; &amp;  Name_rus__c, Name_rus__c)</formula>
    <label>Product Name for the Flow</label>
    <type>Text</type>
</CustomField>