metadata/force-app/main/default/objects/OpportunityLineItem/fields/Product_Type_New__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_New__c</fullName>
    <description>BODEV-1965: 1st layer of New Product Taxonomy</description>
    <formula>TEXT(PricebookEntry.Product2.Product_Type__c)</formula>
    <label>Product Type New</label>
    <type>Text</type>
</CustomField>