metadata/force-app/main/default/objects/OpportunityLineItem/fields/Purchase_family__c.field-meta.xml
<CustomField>
    <fullName>Purchase_family__c</fullName>
    <formula>Text (PricebookEntry.Product2.Purchase_family__c)</formula>
    <label>Purchase family</label>
    <type>Text</type>
</CustomField>