metadata/force-app/main/default/objects/OpportunityLineItem/fields/Purchase_family_order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_family_order__c</fullName>
    <formula>If(Purchase_family__c = &quot;User Upgrade&quot;,1,IF(Purchase_family__c = &quot;Module(s)&quot;,2,IF(Purchase_family__c = &quot;Integration(s), including APIs, Plugins, SDKs and SSO&quot;,3,IF(Purchase_family__c = &quot;Professional Service(s)&quot;,4,9))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase family order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>