metadata/force-app/main/default/objects/OpportunityLineItem/fields/quantity_rounded__c.field-meta.xml
<CustomField>
    <fullName>quantity_rounded__c</fullName>
    <formula>ROUND(Quantity,0)</formula>
    <label>quantity rounded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>