metadata/force-app/main/default/objects/OpportunityLineItem/fields/Recurring_Discount__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Discount__c</fullName>
    <label>Recurring Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>