metadata/force-app/main/default/objects/OpportunityLineItem/fields/Recurring_Discount_missing__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Discount_missing__c</fullName>
    <formula>IF (
AND (
Discount &gt; 0,
ISPICKVAL(Recurring_Discount__c, &quot;&quot;)),
TRUE,
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Discount missing</label>
    <type>Checkbox</type>
</CustomField>