metadata/force-app/main/default/objects/OpportunityLineItem/fields/Refresh__c.field-meta.xml
<CustomField>
    <fullName>Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refresh</label>
    <type>Checkbox</type>
</CustomField>