metadata/force-app/main/default/objects/OpportunityLineItem/fields/Renewal_ARR__c.field-meta.xml
<CustomField>
    <fullName>Renewal_ARR__c</fullName>
    <description>Returns Renewal ARR value of the product line.</description>
    <formula>IF(
  AND(
    For_Renewal__c = TRUE,
    ISPICKVAL(Opportunity.Type, &quot;Existing Business-Renewal&quot;),
    ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;)
  ),
  Original_Price_ARR_OneOff__c *  Quantity,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>