metadata/force-app/main/default/objects/OpportunityLineItem/fields/Renewal_Base_Total_Price_ARR__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Base_Total_Price_ARR__c</fullName>
    <description>BODEV-2718: Formula field to return the base price for renewal incl. pricing factors. In case Initial Default Price is blank, Original Contract Price ARR is used instead.</description>
    <formula>IF(
    AND(
        ISPICKVAL(Opportunity.Type,&quot;Existing Business-Renewal&quot;),
        For_Renewal__c = TRUE
    ),
    /* If Initiali Default Price is blank, alternate with Original Price ARR/One-off */
    IF(
        ISBLANK(Initial_Default_Price_ARR_One_off__c),
        Original_Price_ARR_OneOff__c * Quantity,
        Total_Initial_Default_Price_ARR_One_off__c
    ) +
    Cumulative_Indexation_amount__c +
    Upcoming_Indexation_amount__c +
    Renewal_Uplift_amount__c,
    NULL
)</formula>
    <inlineHelpText>The base price for renewal incl. pricing factors. Total Initial Default Price + Pricing Factors.</inlineHelpText>
    <label>Renewal Base Total Price ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>