metadata/force-app/main/default/objects/OpportunityLineItem/fields/Renewal_Uplift_amount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Uplift_amount__c</fullName>
    <description>Used to store the renewal uplift amount applied to the sales price of the products.</description>
    <formula>IF( Pricing_factors_applied_on_OLI__c &amp;&amp; ISPICKVAL(Opportunity.Price_Uplift_On_Renewal__c,&apos;Yes&apos;),
( Total_Initial_Default_Price_ARR_One_off__c + Cumulative_Indexation_amount__c +
Upcoming_Indexation_amount__c)* Opportunity.Price_Uplift_on_Renewal_percentage__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Uplift amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>