metadata/force-app/main/default/objects/OpportunityLineItem/fields/Renewal_Uplift_ARR__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Uplift_ARR__c</fullName>
    <description>BODEV-2718: Renewal Uplift ARR for Product-level Sales KPI. Renewal Uplift amount is not always correct for Sales KPI because it could be offset with manual discount.</description>
    <formula>IF(
    AND(
        ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;),
        For_Renewal__c = TRUE,
        ISPICKVAL(Opportunity.Type, &quot;Existing Business-Renewal&quot;)
    ),
    /*
        If Total Sales Price &gt;= Renewal Base Price, the entire Renewal Uplift amount is recognised.
        Otherwise the discount is offset with Renewal Uplift amount, but it&apos;ll never be below 0.
    */
    IF(
        Total_Sales_Price_ARR__c - Renewal_Base_Total_Price_ARR__c
        - MAX(0, IF(ISBLANK(Initial_Default_Price_ARR_One_off__c),0,(Original_Price_ARR_OneOff__c - Initial_Default_Price_ARR_One_off__c)* Quantity)) &gt;=0,
        MAX(0, Renewal_Uplift_amount__c),
        MAX(
            0,
            Renewal_Uplift_amount__c - ( Renewal_Base_Total_Price_ARR__c - Total_Sales_Price_ARR__c )
            - MAX(0, IF(ISBLANK(Initial_Default_Price_ARR_One_off__c),0,(Original_Price_ARR_OneOff__c - Initial_Default_Price_ARR_One_off__c)* Quantity))
        )
    ),
    NULL
)</formula>
    <inlineHelpText>Renewal Uplift ARR for Product-level Sales KPI</inlineHelpText>
    <label>Renewal Uplift ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>