metadata/force-app/main/default/objects/OpportunityLineItem/fields/Sales_Price_ARR__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_ARR__c</fullName>
    <description>BODEV-550: Users fill in their Sales Price in ARR to this field, which feeds into the standard field &quot;Sales price&quot;</description>
    <label>Sales Price ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>