metadata/force-app/main/default/objects/OpportunityLineItem/fields/SpotDraft_ARR_One_off_Price__c.field-meta.xml
<CustomField>
    <fullName>SpotDraft_ARR_One_off_Price__c</fullName>
    <description>Created this field to return the highest List/Default/Sales Price.</description>
    <formula>MAX( List_Price_ARR_One_off__c *  Quantity, Default_Price_ARR__c * Quantity,  Sales_Price_ARR__c * Quantity )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SpotDraft ARR/One-off Price</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>