metadata/force-app/main/default/objects/OpportunityLineItem/fields/SpotDraft_Manual_Discount__c.field-meta.xml
<CustomField>
    <fullName>SpotDraft_Manual_Discount__c</fullName>
    <description>Created this field to calculate manual discounts applied on OLI</description>
    <formula>MAX(Default_Price_ARR__c * Quantity, Sales_Price_ARR__c * Quantity ) - (Sales_Price_ARR__c * Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SpotDraft Manual Discount</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>