metadata/force-app/main/default/objects/OpportunityLineItem/fields/SpotDraft_Overall_Discount__c.field-meta.xml
<CustomField>
    <fullName>SpotDraft_Overall_Discount__c</fullName>
    <description>Created this field to calculate overall discounts applied on OLI</description>
    <formula>SpotDraft_Package_Discount__c + SpotDraft_Manual_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SpotDraft Overall Discount</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>