metadata/force-app/main/default/objects/OpportunityLineItem/fields/SpotDraft_Package_Discount__c.field-meta.xml
<CustomField>
    <fullName>SpotDraft_Package_Discount__c</fullName>
    <description>Created this field to track the Package discount for items on OLI</description>
    <formula>IF( Part_of_a_package__c = TRUE, (MAX(List_Price_ARR_One_off__c * Quantity, Default_Price_ARR__c * Quantity, Sales_Price_ARR__c * Quantity) - MAX(Default_Price_ARR__c * Quantity, Sales_Price_ARR__c * Quantity)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SpotDraft Package Discount</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>