metadata/force-app/main/default/objects/OpportunityLineItem/fields/SpotDraft_Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>SpotDraft_Project_Duration__c</fullName>
    <description>Created this field to replace the formula field created before</description>
    <label>SpotDraft Project Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>