metadata/force-app/main/default/objects/OpportunityLineItem/fields/SpotDraft_Total_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>SpotDraft_Total_Sales_Price__c</fullName>
    <description>Created this field to Round Sales Price by 2 decimals for SpotDraft Calculation.</description>
    <formula>Sales_Price_ARR__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SpotDraft Total Sales Price</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>