metadata/force-app/main/default/objects/OpportunityLineItem/fields/Subscription_fee_from_previous_invoice__c.field-meta.xml
<CustomField>
    <fullName>Subscription_fee_from_previous_invoice__c</fullName>
    <description>BODEV 2681 - Build - Renewal Agreement</description>
    <formula>Total_Initial_Default_Price_ARR_One_off__c +  Cumulative_Indexation_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription fee from previous invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>