metadata/force-app/main/default/objects/OpportunityLineItem/fields/Subscription_Fee_MRR_One_off_SD__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Fee_MRR_One_off_SD__c</fullName>
    <description>Created this field to display higher Unit/Default price on the order form template - SpotDraft</description>
    <formula>IF( (UnitPrice &gt; Default_Price__c) , Sales_Price_ARR__c,Default_Price_ARR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SpotDraft Subscription Fee MRR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>