metadata/force-app/main/default/objects/OpportunityLineItem/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <precision>11</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>