metadata/force-app/main/default/objects/OpportunityLineItem/fields/Total_Default_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Default_Price__c</fullName>
    <description>Returns total default price for each product in MRR (Default Price * Quantity)</description>
    <formula>Quantity *  Default_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Default Price</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>