metadata/force-app/main/default/objects/OpportunityLineItem/fields/Total_Initial_Default_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>Total_Initial_Default_Price_ARR_One_off__c</fullName>
    <description>Used to store the total default price of the OLI on creation</description>
    <formula>Initial_Default_Price_ARR_One_off__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Initial Default Price ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>