metadata/force-app/main/default/objects/OpportunityLineItem/fields/Total_Product_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_List_Price__c</fullName>
    <formula>ListPrice * Quantity</formula>
    <label>Total Product List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>