metadata/force-app/main/default/objects/OpportunityLineItem/fields/Total_Product_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Sales_Price__c</fullName>
    <formula>UnitPrice * Quantity</formula>
    <label>Total Product Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>