metadata/force-app/main/default/objects/OpportunityLineItem/fields/Total_Sales_Price_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price_ARR__c</fullName>
    <description>Returns total sales price in ARR</description>
    <formula>Sales_Price_ARR__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Price ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>