metadata/force-app/main/default/objects/OpportunityLineItem/fields/Total_Sales_Price_One_off_Only__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price_One_off_Only__c</fullName>
    <description>BODEV-1999: Total Sales Price field only for One-off products</description>
    <formula>IF(
  For_Renewal__c,
  NULL,
  Total_Sales_Price_ARR__c
)</formula>
    <inlineHelpText>Total Sales Price field only for One-off products</inlineHelpText>
    <label>Total Sales Price One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>