metadata/force-app/main/default/objects/OpportunityLineItem/fields/Unit_Price_with_Discount__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_with_Discount__c</fullName>
    <formula>UnitPrice-(UnitPrice* Discount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price with Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>