metadata/force-app/main/default/objects/OpportunityLineItem/fields/Upsell_OLI_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Upsell_OLI_ID_18_digits__c</fullName>
    <description>The ID of the opportunity product from the opsell opportunity</description>
    <inlineHelpText>The ID of the opportunity product from the opsell opportunity</inlineHelpText>
    <label>Upsell OLI ID (18 digits)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>