metadata/force-app/main/default/objects/OpportunityLineItem/validationRules/Cannot_add_Figma_Connector_product.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_add_Figma_Connector_product</fullName>
    <active>true</active>
    <description>BODEV-3409: Users cannot add Figma Connector product to New Business or Upsell Opportunities.</description>
    <errorConditionFormula>AND(
NOT($Profile.Name = &quot;System Administrator&quot;),
ISNEW(),
Quantity &gt;0,
OR(
TEXT(Opportunity.Type) = &quot;New Business-Enterprise Cloud&quot;,
TEXT(Opportunity.Type) = &quot;Existing Business-Upsell&quot;,
TEXT(Opportunity.Type) = &quot;New Business - Expansion Portal&quot;
),
Product2.Product_ID_18_digits__c = &apos;01t3g000000SAEaAAO&apos;
)</errorConditionFormula>
    <errorMessage>Cannot add Figma Connector product to New business or Upsell opportunities.</errorMessage>
</ValidationRule>