metadata/force-app/main/default/objects/OpportunityLineItem/validationRules/Cannot_add_Integrations_Hub_Package.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_add_Integrations_Hub_Package</fullName>
    <active>true</active>
    <description>BODEV-3209 &amp; BO-1877: Users cannot add Integrations Hub Standard Package or 10 Additional Integrations Hub Configurations product to New Business or Upsell Opportunities.</description>
    <errorConditionFormula>AND(
NOT($Profile.Name = &quot;System Administrator&quot;),
ISNEW(),
Quantity &gt;0,
OR(
TEXT(Opportunity.Type) = &quot;New Business-Enterprise Cloud&quot;,
TEXT(Opportunity.Type) = &quot;Existing Business-Upsell&quot;,
TEXT(Opportunity.Type) = &quot;New Business - Expansion Portal&quot;
),
OR(
Product2.Product_ID_18_digits__c = &apos;01t3g000000Si1yAAC&apos;,
Product2.Product_ID_18_digits__c = &apos;01t3g000000Si23AAC&apos;
)
)</errorConditionFormula>
    <errorMessage>Cannot add Integrations Hub Standard Package or 10 Additional Integrations Hub Configurations product to New business or Upsell opportunities, instead use individual integration products.</errorMessage>
</ValidationRule>